# horus-workai-tool

./: .gitignore  AGENTS.md  README.md  ai_processor.py  app_core.py  build-windows.bat  main.py  main.spec  memorytask_manual.md  preview_helper.py  preview_status.json  preview_tasks_edit.json  pyproject.toml  setup_distrobox.sh  setup_step1.sh  setup_step2.sh  setup_step3.sh  submitter.py  sync_git.py  version.json  workai_scraper.py
.github/workflows/: build-windows.yml
docs/: build-windows.md
docs/specs/: 2026-06-13-gdd-context.md  2026-06-13-manual-task-input.md  2026-06-13-manual-task-integrated.md
static/: app.js  index.html  style.css
tests/: test_ai_processor.py  test_ai_processor_full.py  test_app_core_from_text.py  test_app_core_from_text_full.py  test_gdd.py  test_gdd_integration.py  test_hello.py  test_nhapviec_manual.py  test_submitter_skip_ai.py
