[project]
name = "athena-assistant"
version = "1.0.29"
description = "Athena Assistant - tool nhap viec tu dong cho WorkAI"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
